--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,28 @@
 {
-  "name": "piotrpress/composer-autoloader",
+  "name": "piotrpress/composer-classmapper",
   "type": "composer-plugin",
   "license": "MIT",
-  "description": "This composer command allows to generate simple autoloader file based on a classmap file.",
-  "homepage": "https://PiotrPress",
+  "description": "This Composer command generates a classmap.php file based on project files.",
+  "homepage": "https://github.com/PiotrPress/composer-classmapper",
   "authors": [
     {
       "name": "Piotr Niewiadomski",
-      "homepage": "https://github.com/PiotrPress"
+      "homepage": "https://piotr.press"
     }
   ],
   "keywords": [
-    "autoloader", "autoload", "classmap", "class map", "composer", "composer script", "composer plugin", "composer command"
+    "classmapper", "classmap", "class map", "map", "autoloader", "autoload", "composer", "composer script", "composer plugin", "composer command", "composer classmap", "composer map", "php"
   ],
   "require": {
     "php": ">=7.4",
     "composer-plugin-api": "^2.0"
   },
   "extra": {
-    "class": "PiotrPress\\Composer\\Autoloader\\Plugin"
+    "class": "PiotrPress\\Composer\\ClassMapper\\Plugin"
   },
   "autoload": {
     "psr-4": {
-      "PiotrPress\\Composer\\Autoloader\\": "src/"
+      "PiotrPress\\Composer\\ClassMapper\\": "src/"
     },
     "classmap": [
       "src"
